added common-elements.js script to add elements to pages on the fly.

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -11,11 +11,11 @@
     <!-- ================= PAGE 1: 封面 ================= -->
     <div class="sheet">
         <div style="text-align: center; margin-top: 120px;">
-            <h1 style="font-size: 56px; border: none; color: #e67e22;">我的工程笔记</h1>
+            <h1 style="font-size: 56px; border: none; color: #005f9e;">我的工程笔记</h1>
             <h2 style="font-size: 36px; background: none; color: #555;">第一章：梦开始的地方</h2>
             <h3 style="font-size: 24px; color: #888; border: none;">Chapter 1: Introduction & Team Story</h3>
             
-            <div style="width: 80%; height: 8px; background: #f39c12; margin: 40px auto; border-radius: 5px;"></div>
+            <div style="width: 80%; height: 8px; background: #007acb; margin: 40px auto; border-radius: 5px;"></div>
             
             <div style="text-align: left; margin: 60px 80px; font-size: 20px; line-height: 2;">
                 <p><strong>战队编号：</strong> 2276A</p>
@@ -383,5 +383,6 @@
         <div class="page-number">20</div>
     </div>
 
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 </html>
