--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -12,7 +12,7 @@
 
     <!-- ================= PAGE 61: 章节封面 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 120px;">
             <h1 style="font-size: 56px; border: none; color: var(--primary-color);">脑洞大开时刻</h1>
@@ -42,7 +42,7 @@
 
     <!-- ================= PAGE 62: 4.1 任务拆解 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.1 机器人任务清单</h1>
 
@@ -70,7 +70,7 @@
 
     <!-- ================= PAGE 63: 4.2 电机的分配 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.2 电机的分配</h1>
 
@@ -114,7 +114,7 @@
 
     <!-- ================= PAGE 64: 4.3 头脑风暴 - 底盘 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.3 底盘设计 - 轮子</h1>
 
@@ -157,7 +157,7 @@
 
     <!-- ================= PAGE 68: 速度计算 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.4 底盘设计 - 齿轮比</h1>
 
@@ -191,7 +191,7 @@
 
     <!-- ================= PAGE 69: 4.5 头脑风暴 - 抓手 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.5 Pin的抓取设计(1)</h1>
 
@@ -219,7 +219,7 @@
 
     <!-- ================= PAGE 71: 4.5 头脑风暴 - 抓手 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.5 Pin的抓取设计(2)</h1>
 
@@ -249,7 +249,7 @@
 
     <!-- ================= PAGE 73: 抓手细节 - 防滑 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.5 Pin的抓取设计(3)</h1>
 
@@ -283,7 +283,7 @@
 
     <!-- ================= PAGE 74: 4.2 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(1)</h1>
 
@@ -316,7 +316,7 @@
 
     <!-- ================= PAGE 75: 4.2 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(2)</h1>
 
@@ -363,7 +363,7 @@
 
     <!-- ================= PAGE 76: 4.6 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(3)</h1>
         <h3>抬升大PK</h3>
@@ -425,7 +425,7 @@
 
     <!-- ================= PAGE 80: Beam 怎么拿？(1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.7 Beam的抓取设计(1)</h1>
 
@@ -451,7 +451,7 @@
 
     <!-- ================= PAGE 81: Beam 怎么拿？(2) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.7 Beam的抓取设计(2)</h1>
 
@@ -472,7 +472,7 @@
 
     <!-- ================= PAGE 82: 拖钩设计细节 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.7 Beam的抓取设计(3)</h1>
 
@@ -496,7 +496,7 @@
 
     <!-- ================= PAGE 83: 特殊机关：手腕 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.8 翻转与放置</h1>
 
@@ -524,7 +524,7 @@
 
     <!-- ================= PAGE 84: 4.3 方案整合 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(1)</h1>
         <h3>4.9 一代车诞生啦！(Gen 1 Concept)</h3>
@@ -554,7 +554,7 @@
 
     <!-- ================= PAGE 85: 电机地图 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(2)</h1>
 
@@ -609,7 +609,7 @@
 
     <!-- ================= PAGE 86: 遥控器设置 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(3)</h1>
 
@@ -637,7 +637,7 @@
 
     <!-- ================= PAGE 87: 购物清单 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(4)</h1>
 
@@ -662,7 +662,7 @@
 
     <!-- ================= PAGE 88: 搭建计划 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(5)</h1>
 
@@ -685,7 +685,7 @@
 
     <!-- ================= PAGE 89: 风险预测 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(6)</h1>
 
@@ -714,7 +714,7 @@
 
     <!-- ================= PAGE 90: 为什么不用别的？ ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>4.9 方案整合(7)</h1>
 
@@ -735,7 +735,7 @@
 
     <!-- ================= PAGE 91: 章节总结 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>第四章总结：图纸画好了！</h1>
 
@@ -761,7 +761,8 @@
         <div class="page-number">91</div>
     </div>
 
-    <script src="../assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
