--- a/engineering_notebook/ch05.html
+++ b/engineering_notebook/ch05.html
@@ -10,7 +10,7 @@
 
     <!-- ================= PAGE 91: 章节封面 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 120px;">
             <h1 style="font-size: 56px; border: none; color: #E74C3C;">动手造车啦！</h1>
@@ -40,7 +40,7 @@
 
     <!-- ================= PAGE 92: 5.1 启动会 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.1 搭建启动会</h1>
         
@@ -70,7 +70,7 @@
 
     <!-- ================= PAGE 93: 零件清单 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>购物清单 (Parts List)</h1>
 
@@ -124,7 +124,7 @@
 
     <!-- ================= PAGE 94: 尺寸验证 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>一定要塞进去！(Size Check)</h1>
 
@@ -147,7 +147,7 @@
 
     <!-- ================= PAGE 95: 电机地图 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>电机地图 (Port Map)</h1>
         
@@ -176,7 +176,7 @@
 
     <!-- ================= PAGE 96: 5.2 底盘搭建 (1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 底盘：速度与激情的开始</h1>
 
@@ -203,7 +203,7 @@
 
     <!-- ================= PAGE 97: 5.2 底盘搭建 (2) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 底盘：一定要结实</h1>
 
@@ -228,7 +228,7 @@
 
     <!-- ================= PAGE 98: 5.2 底盘测试 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 第一次试跑：太快了！</h1>
 
@@ -252,7 +252,7 @@
 
     <!-- ================= PAGE 99: 5.2 抬升搭建 (1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 抬升：四连杆的秘密</h1>
 
@@ -277,7 +277,7 @@
 
     <!-- ================= PAGE 100: 5.2 抬升搭建 (2) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 抬升：橡皮筋来帮忙</h1>
 
@@ -303,7 +303,7 @@
 
     <!-- ================= PAGE 101: 5.2 抬升测试 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 抬升：够高吗？</h1>
 
@@ -323,7 +323,7 @@
 
     <!-- ================= PAGE 102: 5.2 抓手搭建 (1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 抓手：螃蟹钳子</h1>
 
@@ -346,7 +346,7 @@
 
     <!-- ================= PAGE 103: 5.2 抓手搭建 (2) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 抓手：防滑大改造</h1>
 
@@ -369,7 +369,7 @@
 
     <!-- ================= PAGE 104: 翻转手腕 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 翻转手腕 (Flip)</h1>
 
@@ -392,7 +392,7 @@
 
     <!-- ================= PAGE 105: 后置拖钩 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 秘密武器：拖钩</h1>
 
@@ -416,7 +416,7 @@
 
     <!-- ================= PAGE 106: 理线 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.2 乱糟糟的线</h1>
 
@@ -439,7 +439,7 @@
 
     <!-- ================= PAGE 107: 5.3 编程开始 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 给机器人注入灵魂</h1>
 
@@ -463,7 +463,7 @@
 
     <!-- ================= PAGE 108: 配置设置 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 第一步：告诉它它是谁</h1>
 
@@ -488,7 +488,7 @@
 
     <!-- ================= PAGE 109: 遥控程序 (1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 遥控：像开坦克一样</h1>
 
@@ -512,7 +512,7 @@
 
     <!-- ================= PAGE 110: 遥控程序 (2) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 遥控：按键分配</h1>
 
@@ -536,7 +536,7 @@
 
     <!-- ================= PAGE 111: 速度控制 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 驯服野马</h1>
 
@@ -556,7 +556,7 @@
 
     <!-- ================= PAGE 112: 自动化尝试 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 偷懒的艺术：宏命令</h1>
 
@@ -575,7 +575,7 @@
 
     <!-- ================= PAGE 113: 陀螺仪 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 走直线神器：陀螺仪</h1>
 
@@ -598,7 +598,7 @@
 
     <!-- ================= PAGE 114: 距离传感器 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 别撞墙！</h1>
 
@@ -614,7 +614,7 @@
 
     <!-- ================= PAGE 115: 自动赛路线 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 自动赛：第一条路线</h1>
 
@@ -642,7 +642,7 @@
 
     <!-- ================= PAGE 116: 自动赛测试 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 自动赛：失败现场</h1>
 
@@ -661,7 +661,7 @@
 
     <!-- ================= PAGE 117: 自动赛测试 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 自动赛：成功了！</h1>
 
@@ -683,7 +683,7 @@
 
     <!-- ================= PAGE 118: 固件更新 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.3 别忘了升级！</h1>
 
@@ -698,7 +698,7 @@
 
     <!-- ================= PAGE 119: 系统联调 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>5.4 第一次全车试跑</h1>
 
@@ -721,7 +721,7 @@
 
     <!-- ================= PAGE 120: 章节总结 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>第五章总结：一代车，出击！</h1>
 
@@ -747,5 +747,6 @@
     </div>
 
     <script src="../assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 </html>
