--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -15,7 +15,6 @@
 <body class="theme-orange">
     <!-- ================= PAGE 21: 章节封面 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 100px;">
             <h1 style="font-size: 56px; border: none; color: #E67E22;">规则大揭秘</h1>
@@ -40,7 +39,6 @@
 
     <!-- ================= PAGE 22: 2.1 游戏概览 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.1 这是一个什么游戏？</h1>
 
@@ -71,7 +69,6 @@
 
     <!-- ================= PAGE 23: 2.2 场地元素研究 (Pin) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.2 场地上的宝贝们：Pin</h1>
 
@@ -99,7 +96,6 @@
 
     <!-- ================= PAGE 24: 2.2 场地元素研究 (Beam) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.2 场地上的宝贝们：Beam</h1>
 
@@ -123,7 +119,6 @@
 
     <!-- ================= PAGE 25: 2.2 场地元素研究 (Goals) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.2 场地上的宝贝们：Goals</h1>
 
@@ -160,7 +155,6 @@
 
     <!-- ================= PAGE 26: 2.3 机器人尺寸 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.3 机器人能长多大？</h1>
 
@@ -195,7 +189,6 @@
 
     <!-- ================= PAGE 27: 2.3 进球规则 <SG6> ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.3 怎么投喂机器人？</h1>
 
@@ -221,7 +214,6 @@
 
     <!-- ================= PAGE 28: 2.4 基础得分 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.4 怎么才能得高分？</h1>
 
@@ -256,7 +248,6 @@
     </div>
     <!-- ================= PAGE 29: 2.4 匹配规则 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.4 颜色匹配的秘密 &lt;SC6&gt;</h1>
 
@@ -282,7 +273,6 @@
 
     <!-- ================= PAGE 30: 2.4 容易忽略的规则 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.4 别被扣分了！</h1>
 
@@ -316,7 +306,6 @@
     <!-- ================= PAGE 31: Scoring Examples  ================= -->
 
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.4 算分大挑战 (Scoring Examples)</h1>
 
@@ -372,7 +361,6 @@
     </div>
     <!-- ================= PAGE 32: Scoring Examples (续) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.4 算分大挑战 (Scoring Examples) 续</h1>
 
@@ -432,7 +420,6 @@
 
     <!-- ================= PAGE 33: 换手规则 &lt;GG11&gt; ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.5 团队赛：换手惊魂</h1>
         <p>宋书玥最关心这个规则，因为她是操控手。规则说必须在 35秒 到 25秒 之间换人。</p>
@@ -456,7 +443,6 @@
 
     <!-- ================= PAGE 34: 技能赛规则 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.6 技能赛特别规则</h1>
 
@@ -484,7 +470,6 @@
 
     <!-- ================= PAGE 35: 设计约束总结 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>2.7 设计约束总结</h1>
 
@@ -507,7 +492,6 @@
 
     <!-- ================= PAGE 36: 策略模拟封面 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 100px;">
             <h1 style="font-size: 48px; color: #2E86C1;">2.8 我们的战术推演</h1>
@@ -535,7 +519,6 @@
 
     <!-- ================= PAGE 37: 策略 A - 低空快跑 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>策略 A：低空快跑流 (Low & Fast)</h1>
 
@@ -576,7 +559,6 @@
 
     <!-- ================= PAGE 38: 策略 B - 高塔建筑师 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>策略 B：高塔建筑师 (Tower Builder)</h1>
 
@@ -611,7 +593,6 @@
 
     <!-- ================= PAGE 39: 策略 C - Beam 专家 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>策略 C：Beam 专家 (Beam Strategist)</h1>
 
@@ -635,7 +616,6 @@
 
     <!-- ================= PAGE 40: 策略 C 详细计算 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>策略 C：详细计算</h1>
 
@@ -672,7 +652,6 @@
 
     <!-- ================= PAGE 41: 策略 D - 高塔上的圣杯 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>策略 D：高塔上的圣杯</h1>
 
@@ -718,7 +697,6 @@
 
     <!-- ================= PAGE 42: 策略 D 评价 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>策略 D：评价</h1>
 
@@ -745,7 +723,6 @@
 
     <!-- ================= PAGE 43: 最终策略决定 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>最终策略决定</h1>
 
@@ -768,7 +745,6 @@
 
     <!-- ================= PAGE 44: 章节总结 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>第二章总结：方向对了！</h1>
 
@@ -802,7 +778,6 @@
 
     <!-- ================= PAGE 45: 附录：规则笔记 (1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
         <div class="chapter-marker"></div>
         <h1>附录：我的规则小抄</h1>
         <div class="math-paper">
@@ -825,7 +800,8 @@
         <div class="page-number">45</div>
     </div>
 
-    <script src="../assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
