--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -11,7 +11,7 @@
 <body class="theme-green">
 
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 120px;">
             <h1 style="font-size: 56px; border: none;">我是小小科学家</h1>
@@ -40,7 +40,7 @@
 
     <!-- ================= PAGE 55: STEM 是什么？ ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？</h1>
 
@@ -67,7 +67,7 @@
 
     <!-- ================= PAGE 56: 技术与工程 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？(续)</h1>
 
@@ -107,7 +107,7 @@
 
     <!-- ================= PAGE 57: 数学 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？(续)</h1>
 
@@ -138,7 +138,7 @@
 
     <!-- ================= PAGE 58: 规则即约束 (Part 1) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.2 “边界”中的自由 (Constraints)</h1>
 
@@ -164,7 +164,7 @@
 
     <!-- ================= PAGE 59: 规则即约束 (Part 2) ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.2 “边界”中的自由 (续)</h1>
 
@@ -196,7 +196,7 @@
 
     <!-- ================= PAGE 60: 机械原理 - 齿轮 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.3 机械魔法：齿轮传动</h1>
 
@@ -231,7 +231,7 @@
 
     <!-- ================= PAGE 61: 机械原理 - 力矩 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.3 机械魔法：力矩与杠杆</h1>
 
@@ -262,7 +262,7 @@
 
     <!-- ================= PAGE 62: 编程概念 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>3.4 让机器人变聪明</h1>
 
@@ -287,7 +287,7 @@
 
     <!-- ================= PAGE 63: 章末总结 ================= -->
     <div class="sheet">
-        <div class="a4-height-indicator"></div>
+
         <div class="chapter-marker"></div>
         <h1>第三章总结：准备动手啦！</h1>
 
@@ -317,7 +317,8 @@
         <div class="page-number">55</div>
     </div>
 
-    <script src="../assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/toggle-buttons.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
