ch06-ch08 to use styles.css

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -801,7 +801,7 @@
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
-    <script src="assets/scripts/common-elements.js"></script>
+    <script src="../assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
