--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -762,7 +762,7 @@
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
-    <script src="assets/scripts/common-elements.js"></script>
+    <script src="../assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
