insert .chapter-marker dynamically based on theme

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -383,6 +383,6 @@
         <div class="page-number">20</div>
     </div>
 
-    <script src="../assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 </html>
