--- a/engineering_notebook/ch03.html
+++ b/engineering_notebook/ch03.html
@@ -12,7 +12,6 @@
 
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 120px;">
             <h1 style="font-size: 56px; border: none;">我是小小科学家</h1>
             <h2 style="font-size: 36px; background: none; color: #555;">第三章：STEM 理念与设计概论</h2>
@@ -41,7 +40,6 @@
     <!-- ================= PAGE 55: STEM 是什么？ ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？</h1>
 
         <p>STEM 就是 <strong>Science（科学）、Technology（技术）、Engineering（工程）、Mathematics（数学）</strong> 的合体！</p>
@@ -54,7 +52,7 @@
             </p>
         </div>
 
-        <img src="../assets/ch03/3_1_s.webp" alt="摩擦力示意图" style="height: 350px; display: block; margin: 15px auto;">
+        <img src="assets/ch03/3_1_s.webp" alt="摩擦力示意图" style="height: 350px; display: block; margin: 15px auto;">
 
         <p class="dialogue"><strong>叶恒嘉：</strong> “原来橡皮筋这么厉害，这就是科学的力量啊！”</p>
 
@@ -68,7 +66,6 @@
     <!-- ================= PAGE 56: 技术与工程 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？(续)</h1>
 
         <div class="knowledge-card" style="margin-bottom:0">
@@ -78,7 +75,7 @@
                 我们用 <strong>陀螺仪 (Gyro)</strong> 告诉机器人怎么走直线，用 <strong>距离传感器</strong> 告诉机器人前面有墙壁。
             </p>
         </div>
-        <img src="../assets/ch03/3_1_te.webp" alt="摩擦力示意图" style="width: 100%; display: block; margin: 10px auto;">
+        <img src="assets/ch03/3_1_te.webp" alt="摩擦力示意图" style="width: 100%; display: block; margin: 10px auto;">
 
         <div class="knowledge-card" style="margin-top:0">
             <h3>E - Engineering (工程)</h3>
@@ -108,7 +105,6 @@
     <!-- ================= PAGE 57: 数学 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.1 STEM 是什么？(续)</h1>
 
         <div class="knowledge-card">
@@ -121,7 +117,7 @@
                 <br>3. 算角度：自动程序里，我们要算机器人转多少度才能对准 Goal。
             </p>
         </div>
-        <img src="../assets/ch03/3_1_m.webp" alt="数学的力量" style="height:320px; display: block; margin: 0 auto;">
+        <img src="assets/ch03/3_1_m.webp" alt="数学的力量" style="height:320px; display: block; margin: 0 auto;">
 
         <!-- <div class="sticky-note">
             <strong>感悟：</strong> 以前觉得数学课很枯燥，现在发现数学太有用了！算错了数，机器人就会撞墙！
@@ -139,7 +135,6 @@
     <!-- ================= PAGE 58: 规则即约束 (Part 1) ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.2 “边界”中的自由 (Constraints)</h1>
 
         <p>王老师说，真正的工程师都是在<strong>约束 (Constraints)</strong> 下工作的。规则就是我们的约束。</p>
@@ -153,7 +148,7 @@
 
             [图片：画了一个小盒子，里面塞着我们的机器人，旁边画了一个箭头，机器人伸展开变得很高大]
         </div> -->
-        <img src="../assets/ch03/3_2_vertical.webp" alt="无限垂直扩展" style="height:320px; display: block; margin: 0 auto;">
+        <img src="assets/ch03/3_2_vertical.webp" alt="无限垂直扩展" style="height:320px; display: block; margin: 0 auto;">
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -165,7 +160,6 @@
     <!-- ================= PAGE 59: 规则即约束 (Part 2) ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.2 “边界”中的自由 (续)</h1>
 
         <h3>2. 只有 6 个电机 &lt;R11&gt;</h3>
@@ -179,7 +173,7 @@
 
         <p class="dialogue"><strong>宋书玥：</strong> “哎呀，电机不够用了！我想做个四轮独立驱动的豪车，看来没戏了。”</p>
         <p><strong>决定：</strong> 我们只能省着用，底盘就用 2 个电机。</p>
-        <img src="../assets/ch03/3_2_motors.webp" alt="无限垂直扩展" style="height:260px; display: block; margin: 0 auto;">
+        <img src="assets/ch03/3_2_motors.webp" alt="无限垂直扩展" style="height:260px; display: block; margin: 0 auto;">
 
         <!-- <h3>3. 只能向上长 &lt;SG2&gt;</h3>
         <p><strong>约束：</strong> 只能变高，不能变宽。</p>
@@ -197,7 +191,6 @@
     <!-- ================= PAGE 60: 机械原理 - 齿轮 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.3 机械魔法：齿轮传动</h1>
 
         <p>齿轮是机器人动力传输的核心。它们能神奇地调节动力，让你决定机器人是做‘短跑运动员’还是‘大力士’。</p>
@@ -220,7 +213,7 @@
             [Image of Gear Ratio diagram]
             [图片：画了两组齿轮，一组是大带小（画着闪电表示快），一组是小带大（画着大力士表示有力）]
         </div> -->
-        <img src="../assets/ch03/3_3_gears.webp" alt="齿轮传动" style="height:260px; display: block; margin: 0 auto;">
+        <img src="assets/ch03/3_3_gears.webp" alt="齿轮传动" style="height:260px; display: block; margin: 0 auto;">
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -232,7 +225,6 @@
     <!-- ================= PAGE 61: 机械原理 - 力矩 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.3 机械魔法：力矩与杠杆</h1>
 
         <p>我们要做长长的手臂去挂高塔，但是手臂越长，电机越费力。</p>
@@ -249,7 +241,7 @@
 
             [图片：画了一个跷跷板，一头是重重的 Beam，另一头是橡皮筋在帮忙拉，电机在中间笑得很开心]
         </div> -->
-        <img src="../assets/ch03/3_3_seesaw.webp" alt="杠杆原理" style="height:250px; display: block; margin: 0 auto;">
+        <img src="assets/ch03/3_3_seesaw.webp" alt="杠杆原理" style="height:250px; display: block; margin: 0 auto;">
 
         <p class="dialogue">有了机械魔法，我们的机器人就像有了强壮的“身体”。但光有身体还不够，还得有个聪明的“大脑”来指挥它！接下来，就让我们进入编程的世界，看看怎么让机器人“活”起来！</p>
 
@@ -263,7 +255,6 @@
     <!-- ================= PAGE 62: 编程概念 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>3.4 让机器人变聪明</h1>
 
         <p>叶恒瑞给我们上了一堂编程课。他说机器人其实很笨，必须告诉它每一步怎么做。</p>
@@ -288,7 +279,6 @@
     <!-- ================= PAGE 63: 章末总结 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>第三章总结：准备动手啦！</h1>
 
         <div class="knowledge-card">
@@ -308,7 +298,7 @@
             [Image of Team brainstorming]
             [图片：大家围坐在一起，中间放着一堆 VEX 零件和纸笔，蓄势待发的样子]
         </div> -->
-        <img src="../assets/ch03/3_z_ready_to_go.webp" alt="Ready to Go" style="height:300px; display: block; margin: 50px auto;">
+        <img src="assets/ch03/3_z_ready_to_go.webp" alt="Ready to Go" style="height:300px; display: block; margin: 50px auto;">
 
         <div class="footer">
             <span class="handwriting-box">日期：</span>
@@ -318,7 +308,7 @@
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
-    <script src="../assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
