--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -13,7 +13,6 @@
     <!-- ================= PAGE 61: 章节封面 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <div style="text-align: center; margin-top: 120px;">
             <h1 style="font-size: 56px; border: none; color: var(--primary-color);">脑洞大开时刻</h1>
             <h2 style="font-size: 36px; background: none; color: #555;">第四章：概念设计与方案研讨</h2>
@@ -43,7 +42,6 @@
     <!-- ================= PAGE 62: 4.1 任务拆解 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.1 机器人任务清单</h1>
 
         <p>根据之前的规则分析，我们把机器人的工作列了个清单。这就像是给机器人找工作的“招聘启事”。</p>
@@ -56,7 +54,7 @@
             3. 建筑师（抬升）：能把 Pin 一个个叠起来（Stack）。<br>
             4. 杂技演员（翻转）：能把倒着的 Pin 翻过来（Flip）。
         </div>
-        <img src="../assets/ch04/4_1_omnipotent.webp" alt="全能机器人"
+        <img src="assets/ch04/4_1_omnipotent.webp" alt="全能机器人"
             style="height:320px; display: block; margin: 30px auto; border-radius: 20px;">
         <p class="dialogue"><strong>叶恒嘉：</strong> “这活儿也太多了吧！而且还要缩在那么小的尺寸里出发（&lt;R5&gt;），太难了！”</p>
         <p class="dialogue"><strong>叶恒瑞：</strong> “别急，我们把这些任务拆开，一个一个想办法。”</p>
@@ -71,7 +69,6 @@
     <!-- ================= PAGE 63: 4.2 电机的分配 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.2 电机的分配</h1>
 
         <p>我们遇到了第一个大难题：<strong>电机不够用！</strong></p>
@@ -115,7 +112,6 @@
     <!-- ================= PAGE 64: 4.3 头脑风暴 - 底盘 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.3 底盘设计 - 轮子</h1>
 
         <p>虽然决定了用 2 个电机做底盘，但是用什么轮子呢？</p>
@@ -125,7 +121,7 @@
         <p><strong>优点：</strong> 结构简单，足够结实！</p>
         <p><strong>缺点：</strong> 转弯的时候摩擦力大，可能会卡顿。</p>
 
-        <!-- <img src="../assets/ch04/4_1_2_4-wheel-chassis.webp" alt="简单4轮底盘"
+        <!-- <img src="assets/ch04/4_1_2_4-wheel-chassis.webp" alt="简单4轮底盘"
             style="height:320px; display: block; margin: 30px auto; border-radius: 20px;"> -->
 
         <h3>方案 B：全向轮底盘 (最终选择)</h3>
@@ -136,7 +132,7 @@
 
             [图片：草图，特写了Omni轮子上面的小滚珠，写着“丝滑”]
         </div> -->
-        <img src="../assets/ch04/4_3_omni-wheel-chassis.webp" alt="全向轮底盘"
+        <img src="assets/ch04/4_3_omni-wheel-chassis.webp" alt="全向轮底盘"
             style="height:320px; display: block; margin: 30px auto; border-radius: 20px;">
 
 
@@ -158,7 +154,6 @@
     <!-- ================= PAGE 68: 速度计算 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.4 底盘设计 - 齿轮比</h1>
 
         <p><strong>宋书玥：</strong> “我要跑得比风还快！这样才能抢在对手前面把 Pin 都捡走。”</p>
@@ -176,7 +171,7 @@
             [Image of Gear Ratio diagram]
             [图片：画了一个大齿轮咬合一个小齿轮，旁边画了风的线条表示速度很快]
         </div> -->
-        <img src="../assets/ch04/4_4_gears.webp" alt="加速齿轮"
+        <img src="assets/ch04/4_4_gears.webp" alt="加速齿轮"
             style="height:320px; display: block; margin: 30px auto; border-radius: 20px;">
 
 
@@ -192,7 +187,6 @@
     <!-- ================= PAGE 69: 4.5 头脑风暴 - 抓手 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.5 Pin的抓取设计(1)</h1>
 
         <p>Pin 是圆柱形的，表面很滑，这是最头疼的问题。</p>
@@ -205,7 +199,7 @@
         <!-- <div class="img-placeholder" style="height: 150px;">
 
         </div> -->
-        <img src="../assets/ch04/4_5_1_forklift.webp" alt="铲车"
+        <img src="assets/ch04/4_5_1_forklift.webp" alt="铲车"
             style="height:320px; display: block; margin: 50px auto; border-radius: 20px;">
 
 
@@ -220,7 +214,6 @@
     <!-- ================= PAGE 71: 4.5 头脑风暴 - 抓手 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.5 Pin的抓取设计(2)</h1>
 
         <h3>方案 B：主动夹爪 (Claw) - 最终选择</h3>
@@ -235,7 +228,7 @@
 
             [图片：草图，画了一个两指夹爪夹住 Pin 的样子，标注了“稳”]
         </div> -->
-        <img src="../assets/ch04/4_5_2_claw_no_rubber.webp" alt="铲车"
+        <img src="assets/ch04/4_5_2_claw_no_rubber.webp" alt="铲车"
             style="height:320px; display: block; margin: 50px auto; border-radius: 20px;">
 
         <p>虽然一次只能抓一个，比较慢，但是我们要的是<strong>准确度</strong>！只有抓稳了才能堆高高。</p>
@@ -250,7 +243,6 @@
     <!-- ================= PAGE 73: 抓手细节 - 防滑 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.5 Pin的抓取设计(3)</h1>
 
         <h3>小秘密：橡皮筋大法</h3>
@@ -260,7 +252,7 @@
         <p class="dialogue"><strong>叶恒嘉：</strong> “我有办法！给爪子戴上‘手套’！”</p>
 
         <p>他找来了 VEX 的橡胶皮筋，缠在爪子的内侧。哇！效果立竿见影！</p>
-        <img src="../assets/ch04/4_5_3_claw_with_rubber.webp" alt="铲车"
+        <img src="assets/ch04/4_5_3_claw_with_rubber.webp" alt="铲车"
             style="height:320px; display: block; margin: 50px auto; border-radius: 20px;">
 
         <div class="blackboard">
@@ -284,7 +276,6 @@
     <!-- ================= PAGE 74: 4.2 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(1)</h1>
 
         <p>我们要把 Pin 举起来，挂到高塔上，或者叠在别的 Pin 上面。</p>
@@ -300,7 +291,7 @@
             <br>2. <strong>举不高：</strong> 因为机器人开始时必须缩成一团（有尺寸限制），手臂不能做得太长，所以够不到太高的地方。
             <br>3. <strong>容易翻：</strong> 手臂伸出去太远，机器人很容易向前“栽跟头”。
         </p>
-        <img src="../assets/ch04/4_6_1_4-bar.webp" alt="4连杆"
+        <img src="assets/ch04/4_6_1_4-bar.webp" alt="4连杆"
             style="height:280px; display: block; margin: 50px auto; border-radius: 20px;">
 
         <!-- <div class="img-placeholder" style="height: 150px;">
@@ -317,7 +308,6 @@
     <!-- ================= PAGE 75: 4.2 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(2)</h1>
 
         <div style="display: flex; align-items: center; gap: 20px;">
@@ -328,7 +318,7 @@
                 <p><strong>缺点：</strong> 太重了！太复杂了！我们怕做出来车头太重，一刹车就翻跟头。</p>
             </div>
             <div style="flex: 1;">
-                <img src="../assets/ch04/4_6_2_dr4b.webp" alt="反向双4连杆"
+                <img src="assets/ch04/4_6_2_dr4b.webp" alt="反向双4连杆"
                     style="width: 280px; height: auto; border-radius: 20px;">
             </div>
         </div>
@@ -342,7 +332,7 @@
                         </p>
                         <p><strong>缺点：</strong> 需要专门的链条导轨，摩擦力大，容易卡住。</p>            </div>
             <div style="flex: 1;">
-                <img src="../assets/ch04/4_6_2_hoist.webp" alt="反向双4连杆"
+                <img src="assets/ch04/4_6_2_hoist.webp" alt="反向双4连杆"
                     style="width: 280px; height: auto; border-radius: 20px;">
             </div>
         </div>
@@ -364,7 +354,6 @@
     <!-- ================= PAGE 76: 4.6 头脑风暴 - 抬升 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.6 抬升设计(3)</h1>
         <h3>抬升大PK</h3>
 
@@ -412,7 +401,7 @@
         <h3>力气够不够？</h3>
         <p>Beam 很重（170克），再加上爪子，一个电机举不起来怎么办？</p>
         <p>还记得第三章我们讨论过的机械魔法吗？借助能让<strong>减速齿轮</strong>带来的力量放大和<strong>橡皮筋</strong>提供的“重力补偿”，就可以轻松解决。</p>
-        <!-- <img src="../assets/ch04/4_6_3_chain_lift_concept.webp" alt="链条升降概念图"
+        <!-- <img src="assets/ch04/4_6_3_chain_lift_concept.webp" alt="链条升降概念图"
             style="height: 250px; display: block; margin: 30px auto; border-radius: 20px;"> -->
 
         <div class="footer">
@@ -426,7 +415,6 @@
     <!-- ================= PAGE 80: Beam 怎么拿？(1) ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.7 Beam的抓取设计(1)</h1>
 
         <!-- <h1>4.2 最难的挑战：Beam</h1> -->
@@ -452,7 +440,6 @@
     <!-- ================= PAGE 81: Beam 怎么拿？(2) ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.7 Beam的抓取设计(2)</h1>
 
         <h3>方案 B：主动翻转爪</h3>
@@ -473,7 +460,6 @@
     <!-- ================= PAGE 82: 拖钩设计细节 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.7 Beam的抓取设计(3)</h1>
 
         <h3>简单的拖钩</h3>
@@ -497,7 +483,6 @@
     <!-- ================= PAGE 83: 特殊机关：手腕 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.8 翻转与放置</h1>
 
         <h3>会翻转的手腕 (Wrist)</h3>
@@ -525,7 +510,6 @@
     <!-- ================= PAGE 84: 4.3 方案整合 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(1)</h1>
         <h3>4.9 一代车诞生啦！(Gen 1 Concept)</h3>
 
@@ -555,7 +539,6 @@
     <!-- ================= PAGE 85: 电机地图 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(2)</h1>
 
         <h3>电机地图 (Port Map)</h3>
@@ -610,7 +593,6 @@
     <!-- ================= PAGE 86: 遥控器设置 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(3)</h1>
 
         <h3>怎么开车？(Controls)</h3>
@@ -625,7 +607,7 @@
         <!-- <div class="img-placeholder" style="height: 200px;">
 
         </div> -->
-        <img src="../assets/ch04/4_9_5_IQ Gen 2 Controller LayoutConfig.webp" alt="遥控器按键布局"
+        <img src="assets/ch04/4_9_5_IQ Gen 2 Controller LayoutConfig.webp" alt="遥控器按键布局"
             style="height:400px; display: block; margin: 30px auto; border-radius: 20px;">
 
         <div class="footer">
@@ -638,7 +620,6 @@
     <!-- ================= PAGE 87: 购物清单 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(4)</h1>
 
         <h3>购物清单 (Parts List)</h3>
@@ -663,7 +644,6 @@
     <!-- ================= PAGE 88: 搭建计划 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(5)</h1>
 
         <h3>搭建时间表</h3>
@@ -686,7 +666,6 @@
     <!-- ================= PAGE 89: 风险预测 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(6)</h1>
 
         <h3>要是坏了怎么办？(Risk)</h3>
@@ -715,7 +694,6 @@
     <!-- ================= PAGE 90: 为什么不用别的？ ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>4.9 方案整合(7)</h1>
 
         <h3>为什么不用别的方案？</h3>
@@ -736,7 +714,6 @@
     <!-- ================= PAGE 91: 章节总结 ================= -->
     <div class="sheet">
 
-        <div class="chapter-marker"></div>
         <h1>第四章总结：图纸画好了！</h1>
 
         <p>
@@ -762,7 +739,7 @@
     </div>
 
     <script src="assets/scripts/toggle-buttons.js"></script>
-    <script src="../assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 
 </html>
