--- a/engineering_notebook/ch06.html
+++ b/engineering_notebook/ch06.html
@@ -589,6 +589,6 @@
         <div class="footer"><span>记录人：印涵邸</span></div>
         <div class="page-number">151</div>
     </div>
-    <script src="../assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 </html>
