--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -6,7 +6,7 @@
     <title>工程笔记 - 第七章：进化的力量 (2276A)</title>
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
-<body class="theme-purple">
+<body class="theme-purple-7">
 
     <!-- ================= PAGE 151: 章节封面 ================= -->
     <div class="sheet">
@@ -543,6 +543,6 @@
         </div>
         <div class="page-number">190</div>
     </div>
-    <script src="../assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 </html>
