--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -305,6 +305,6 @@
         </div>
         <div class="page-number">200</div>
     </div>
-    <script src="../assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/common-elements.js"></script>
 </body>
 </html>
