--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -8,6 +8,22 @@
 </head>
 <body class="theme-ch01">
 
+    <!-- ================= COVER PAGE ================= -->
+<div class="sheet cover-page" 
+     style="
+        /* Your existing styles */
+        background-color: white;
+        background-image: url('assets/ch01/cover.webp'); 
+        background-size: 100%; 
+        background-position: center; 
+        background-repeat: no-repeat;
+        
+        /* THE NEW ADDITION: */
+        /* inset | x-offset | y-offset | blur-radius | spread-radius | color */
+        box-shadow: inset 0 0 40px 20px rgba(255, 255, 255, 2);
+     ">
+</div>
+
     <!-- ================= PAGE 1: 封面 ================= -->
     <div class="sheet">
         <div style="text-align: center; margin-top: 120px;">
