added navigation-button.js and updated references in chapter HTML files

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -400,5 +400,6 @@
     </div>
 
     <script src="assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/navigation-button.js"></script>
 </body>
 </html>
