--- a/engineering_notebook/ch05.html
+++ b/engineering_notebook/ch05.html
@@ -718,5 +718,6 @@
 
     <script src="../assets/scripts/toggle-buttons.js"></script>
     <script src="assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/navigation-button.js"></script>
 </body>
 </html>
