--- a/engineering_notebook/ch06.html
+++ b/engineering_notebook/ch06.html
@@ -590,5 +590,6 @@
         <div class="page-number">151</div>
     </div>
     <script src="assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/navigation-button.js"></script>
 </body>
 </html>
