--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -544,5 +544,6 @@
         <div class="page-number">190</div>
     </div>
     <script src="assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/navigation-button.js"></script>
 </body>
 </html>
