--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -306,5 +306,6 @@
         <div class="page-number">200</div>
     </div>
     <script src="assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/navigation-button.js"></script>
 </body>
 </html>
