--- a/engineering_notebook/table of contents - 1.html
+++ b/engineering_notebook/table of contents - 1.html
@@ -194,6 +194,7 @@
         <li>最终设计理念总结（阐述该设计如何最大化得分潜力）</li>
         <li>**项目可重现性总结**：提供足够详细的信息，保证读者能据此重现整个项目和机器人 <span class="citation"></span></li>
     </ul>
+    <script src="assets/scripts/navigation-button.js"></script>
 
 </body>
 </html>
