ch04: use 4-bar linkage design

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -26,10 +26,10 @@
                 <p><strong>战队名称：</strong> 机甲梦想家 (Mech Dreamers)</p>
                 <p><strong>所属机构：</strong> 北京西城区青少年科技活动馆</p>
                 <p><strong>指导老师：</strong> 王昕 老师</p>
-                <p><strong>记录员：</strong> 印涵邸</p>
+                <!-- <p><strong>记录员：</strong> 印涵邸</p> -->
             </div>
             
-            <div style="background-color: #FFF9C4; padding: 15px; transform: rotate(-2deg); border: 1px solid #F1C40F; margin-top: 50px;">
+            <div class="sticky-note">
                 <strong>我们的口号：</strong><br>
                 梦想启动，智造未来！(Ignite Dreams!)
             </div>
