--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -459,6 +459,7 @@
 
         <p>但是如果机器人卡住了怎么办？我们可以申请重置 <strong>&lt;RSC5&gt;</strong>。</p>
         <p><span class="chinese-label">注意：</span> 重置的时候，机器人手里拿的分数都要拿走，不计分。所以重置是很亏的，我们要保证代码稳定！</p>
+        <br>
         <h1>2.8 设计约束总结</h1>
 
         <p>综合上面的所有规则，我们给设计组提了几点“死命令”：</p>
@@ -736,7 +737,7 @@
 
         <p>经过四轮推演，我们全票通过了以 <strong>策略 D “高塔上的圣杯”</strong> 为我们的主要研发方向！</p>
 
-        <div class="sticky-note" style="transform: rotate(1deg);">
+        <div class="sticky-note">
             <p><strong>我们的结论：</strong></p>
             <p>虽然策略D很难，但它是理论与实际结合的最佳得分方案。我们决定接受挑战！接下来的工作重心将全部围绕如何实现这个“高塔圣杯”来展开。</p>
             <p><strong>Let's do it!</strong></p>
