--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -360,21 +360,21 @@
         <table>
             <tr>
                 <th>比什么？</th>
-                <th>四连杆</th>
+                <th class="winner">四连杆</th>
                 <th>双反四连杆</th>
-                <th class="winner">链条电梯</th>
+                <th>链条电梯</th>
             </tr>
             <tr>
                 <td>高度</td>
-                <td>3 (一般)</td>
-                <td class="winner">5 (超高)</td>
                 <td>4</td>
+                <td class="winner">5</td>
+                <td class="winner">5</td>
             </tr>
             <tr>
                 <td>稳定性</td>
-                <td>2 (容易翻)</td>
-                <td>2 (晃)</td>
                 <td class="winner">5 (很稳)</td>
+                <td>2 (晃)</td>
+                <td>4</td>
             </tr>
             <tr>
                 <td>轻便</td>
@@ -390,14 +390,14 @@
             </tr>
             <tr>
                 <td><strong>总分</strong></td>
-                <td>15</td>
+                <td class="winner"><strong>19 (胜出)</strong></td>
                 <td>11</td>
-                <td class="winner"><strong>16 (胜出)</strong></td>
+                <td>16</td>
             </tr>
         </table>
-        <p><strong>最终选择：</strong> 经过一番激烈讨论，我们决定采用 <strong>链条升降</strong> 方案！</p>
-        <p class="dialogue"><strong>叶恒瑞：</strong> “虽然链条升降的结构稍微复杂一点，但它直上直下的特性，能让我们在堆叠 Pin 和挂 Beam 时实现更精准的对位。而且，重心稳定，不容易翻车，这对于我们冲刺高分至关重要！”</p>
-        <p>大家一致认为，为了比赛的精准度和稳定性，值得投入更多的搭建精力。</p>
+        <p><strong>最终选择：</strong> 经过一番激烈讨论，我们决定采用 <strong>四连杆</strong> 方案！</p>
+        <p class="dialogue"><strong>叶恒瑞：</strong> “四连杆结构简单，轻便灵活，能让我们快速搭建和调试。虽然它举高时有些弧度，但通过精细操作和调整，我们相信可以克服，而且它的稳定性更高，不容易翻车！”</p>
+        <p>大家一致认为，在保证灵活和速度的前提下，四连杆是我们最好的选择，能帮助我们更有效地完成任务。</p>
         <h3>力气够不够？</h3>
         <p>Beam 很重（170克），再加上爪子，一个电机举不起来怎么办？</p>
         <p>还记得第三章我们讨论过的机械魔法吗？借助能让<strong>减速齿轮</strong>带来的力量放大和<strong>橡皮筋</strong>提供的“重力补偿”，就可以轻松解决。</p>
